--- a/index.html
+++ b/index.html
@@ -5,59 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
-    <link rel="shortcut icon" href="./img/icons/favicon.ico" type="image/x-icon">
-    <title>Magic Brows</title>
+    <title>Document</title>
 </head>
 <body>
-   <div class="wrapper">
-    <div class="full-screen">
-        <div class="full-screen__body">
-            <div class="full-screen__title">Magic Brows</div>
-            <div class="full-screen__text">The best or nothing</div>
-        </div>
-        <video preload="auto" autoplay muted loop src="./img/mb.mp4" class="full-screen__video"></video>
-    </div>
-    <div class="content">
-        <div class="content__container">
-            <div class="card">
-                <div class="card__row">
-                    <div class="card__image">
-                        <img src="./img/1.PNG" alt="">
-                    </div>
-                    <div class="card__title">Оформление</div>
-                    <div class="card__text">Для самой обычной</div>
-                </div>
-            </div>
-            <div class="card">
-                <div class="card__row">
-                    <div class="card__image">
-                        <img src="./img/2.PNG" alt="">
-                    </div>
-                    <div class="card__title">Окрашивание</div>
-                    <div class="card__text">Для самой скупой</div>
-                </div>
-            </div>
-            <div class="card">
-                <div class="card__row">
-                    <div class="card__image">
-                        <img src="./img/d.jpeg" alt="">
-                    </div>
-                    <div class="card__title">Перманент</div>
-                    <div class="card__text">Для самой богатой</div>
-                </div>
-            </div>
-            <div class="card">
-                <div class="card__row">
-                    <div class="card__image">
-                        <img src="./img/s.jpg" alt="">
-                    </div>
-                    <div class="card__title">Просто фото</div>
-                    <div class="card__text">Эт я делала в фотошопе</div>
-                </div>
-            </div>
-
-        </div>
-    </div>
-   </div>
+    
 </body>
 </html>
