--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="full-screen__title">Magic Brows</div>
             <div class="full-screen__text">The best or nothing</div>
         </div>
-        <video preload="auto" autoplay muted loop src="./img/mb.mp4" class="full-screen__video"></video>
+        <video preload="auto" playsinline autoplay muted loop src="./img/mb.mp4" class="full-screen__video"></video>
     </div>
     <div class="content">
         <div class="content__container">
