Change title and text of cards

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
                     <div class="card__image">
                         <img src="./img/1.PNG" alt="">
                     </div>
-                    <div class="card__title">Оформление</div>
-                    <div class="card__text">Для самой обычной</div>
+                    <div class="card__title">Название</div>
+                    <div class="card__text">Небольшое описание</div>
                 </div>
             </div>
             <div class="card">
@@ -33,8 +33,8 @@
                     <div class="card__image">
                         <img src="./img/2.PNG" alt="">
                     </div>
-                    <div class="card__title">Окрашивание</div>
-                    <div class="card__text">Для самой скупой</div>
+                    <div class="card__title">Название</div>
+                    <div class="card__text">Небольшое описание</div>
                 </div>
             </div>
             <div class="card">
@@ -42,8 +42,8 @@
                     <div class="card__image">
                         <img src="./img/d.jpeg" alt="">
                     </div>
-                    <div class="card__title">Перманент</div>
-                    <div class="card__text">Для самой богатой</div>
+                    <div class="card__title">Название</div>
+                    <div class="card__text">Небольшое описание</div>
                 </div>
             </div>
             <div class="card">
@@ -51,8 +51,8 @@
                     <div class="card__image">
                         <img src="./img/s.jpg" alt="">
                     </div>
-                    <div class="card__title">Просто фото</div>
-                    <div class="card__text">Эт я делала в фотошопе</div>
+                    <div class="card__title">Название</div>
+                    <div class="card__text">Небольшое описание</div>
                 </div>
             </div>
 
