--- a/index.html
+++ b/index.html
@@ -59,5 +59,13 @@
         </div>
     </div>
    </div>
+   <script>
+    let question = ('А ты была уже у меня на бровях?','');
+     if (question === 'Да'){
+         alert('Молодец ❤️, но запишись ещё на что-нибудь 😊')
+        }else if (!question){
+         alert('Зачем нажала "отмена"?')
+        }else {alert('Тогда быстрее пиши мне в Direct или Telegram🤗')}
+   </script>
 </body>
 </html>
