--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </div>
    </div>
    <script>
-    let question = ('А ты была уже у меня на бровях?','');
+    let question = prompt ('А ты была уже у меня на бровях?','');
      if (question === 'Да'){
          alert('Молодец ❤️, но запишись ещё на что-нибудь 😊')
         }else if (!question){
