Update index.html ff

--- a/index.html
+++ b/index.html
@@ -60,12 +60,17 @@
     </div>
    </div>
    <script>
-    let question = prompt ('А ты была уже у меня на бровях?','');
-     if (question === 'Да'){
-         alert('Молодец ❤️, но запишись ещё на что-нибудь 😊')
-        }else if (!question){
-         alert('Зачем нажала "отмена"?')
-        }else {alert('Тогда быстрее пиши мне в Direct или Telegram🤗')}
+   let x = prompt('Введи число','');
+   let n = prompt ('Какое число нужно ?','');
+   function pow(x,n){
+    return n-x;
+   }
+   let result = pow(x,n);
+   if (x>n){
+   alert('Тебе надо отнять :' + result);
+   }else{
+   alert('Тебе надо прибавить :'+result);
+   }
    </script>
 </body>
 </html>
