--- a/index.html
+++ b/index.html
@@ -6,71 +6,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="shortcut icon" href="./img/icons/favicon.ico" type="image/x-icon">
+    <link href = "fonts\gilroy\stylesheet.css" rel = "stylesheet" type = "text/css" />
     <title>Magic Brows</title>
 </head>
 <body>
-   <div class="wrapper">
-    <div class="full-screen">
-        <div class="full-screen__body">
-            <div class="full-screen__title">Magic Brows</div>
-            <div class="full-screen__text">The best or nothing</div>
+    <div class="wrapper">
+        <div class="full-screen">
+            <div class="full-screen__body">
+                <div class="full-screen__title">KAMILA SHAYAKHMETOVA</div>
+                <div class="full-screen__text">Makeup artist</div>
+                <div class="full-screen__link">VIEW PORTFOLIO</div>
+            </div>
+            <div class="full-screen__photo">
+                <img src="" alt="">
+            </div>
         </div>
-        <video preload="auto" playsinline autoplay muted loop src="./img/mb.mp4" class="full-screen__video"></video>
-    </div>
-    <div class="content">
-        <div class="content__container">
-            <div class="card">
-                <div class="card__row">
-                    <div class="card__image">
-                        <img src="./img/1.PNG" alt="">
+        <div class="container">
+            <div class="content">
+                <div class="about">
+                    <div class="about__body">
+                        <div class="about__title">About Me</div>
                     </div>
-                    <div class="card__title">Название</div>
-                    <div class="card__text">Небольшое описание</div>
                 </div>
             </div>
-            <div class="card">
-                <div class="card__row">
-                    <div class="card__image">
-                        <img src="./img/2.PNG" alt="">
-                    </div>
-                    <div class="card__title">Название</div>
-                    <div class="card__text">Небольшое описание</div>
-                </div>
-            </div>
-            <div class="card">
-                <div class="card__row">
-                    <div class="card__image">
-                        <img src="./img/d.jpeg" alt="">
-                    </div>
-                    <div class="card__title">Название</div>
-                    <div class="card__text">Небольшое описание</div>
-                </div>
-            </div>
-            <div class="card">
-                <div class="card__row">
-                    <div class="card__image">
-                        <img src="./img/s.jpg" alt="">
-                    </div>
-                    <div class="card__title">Название</div>
-                    <div class="card__text">Небольшое описание</div>
-                </div>
-            </div>
-
         </div>
     </div>
    </div>
    <script>
-   let x = prompt('Введи число','');
-   let n = prompt ('Какое число нужно ?','');
-   function pow(x,n){
-    return n-x;
-   }
-   let result = pow(x,n);
-   if (x>n){
-   alert('Тебе надо отнять :' + result);
-   }else{
-   alert('Тебе надо прибавить :'+result);
-   }
+
    </script>
 </body>
 </html>
