--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="full-screen">
             <div class="full-screen__body">
                 <div class="full-screen__title">KAMILA SHAYAKHMETOVA</div>
-                <div class="full-screen__text">Makeup artist</div>
+                <div class="full-screen__text">Magic Brows</div>
                 <div class="full-screen__link">VIEW PORTFOLIO</div>
             </div>
             <div class="full-screen__photo">
