--- a/index.html
+++ b/index.html
@@ -24,13 +24,11 @@
         <div class="container">
             <div class="content">
                 <div class="about">
+                    <div class="about__title title">About Me</div>
                     <div class="about__body">
-                        <div class="about__textblock">
-                            <div class="about__title title">About Me</div>
-                            <div class="about__text text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti ut cumque incidunt et. Qui, enim dolor amet porro maxime, voluptatem hic quas commodi impedit dolorum, possimus quam repellat iste laboriosam?</div>    
-                        </div>
+                        <div class="about__text text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti ut cumque incidunt et. Qui, enim dolor amet porro maxime, voluptatem hic quas commodi impedit dolorum, possimus quam repellat iste laboriosam?</div>    
                         <div class="about_image">
-                           <!-- <img src="./img/kamila.JPG" alt=""> -->
+                           <img src="./img/kamila.JPG" alt="">
                         </div>
                     </div>
                 </div>
