--- a/index.html
+++ b/index.html
@@ -23,12 +23,27 @@
         </div>
         <div class="container">
             <div class="content">
-                <div class="about">
-                    <div class="about__title title">About Me</div>
-                    <div class="about__body">
-                        <div class="about__text text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti ut cumque incidunt et. Qui, enim dolor amet porro maxime, voluptatem hic quas commodi impedit dolorum, possimus quam repellat iste laboriosam?</div>    
-                        <div class="about_image">
+                <div class="about block">
+                    <div class="about__title block__title">
+                        About me
+                    </div>
+                    <div class="about__circle block__title-circle circle"></div>
+                    <div class="about__body block__body">
+                        <div class="about__text block__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti ut cumque incidunt et. Qui, enim dolor amet porro maxime, voluptatem hic quas commodi impedit dolorum, possimus quam repellat iste laboriosam?</div>    
+                        <div class="about_image block__image">
                            <img src="./img/kamila.JPG" alt="">
+                        </div>
+                    </div>
+                </div>
+                <div class="portfolio block">
+                    <div class="portfolio__title block__title">Portfolio</div>
+                    <div class="portfolio__circle block__title-circle circle"></div>
+                    <div class="portfolio__body portfolio__colums">
+                        <div class="portfolio__colums-one">
+
+                        </div>
+                        <div class="portfolio__colums-two two">
+
                         </div>
                     </div>
                 </div>
