--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./css/style.css">
     <link rel="shortcut icon" href="./img/icons/favicon.ico" type="image/x-icon">
     <link href = "fonts\gilroy\stylesheet.css" rel = "stylesheet" type = "text/css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js" integrity="sha512-cOH8ndwGgPo+K7pTvMrqYbmI8u8k6Sho3js0gOqVWTmQMlLIi6TbqGWRTpf1ga8ci9H3iPsvDLr4X7xwhC/+DQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <title>Magic Brows</title>
 </head>
 <body>
