--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="shortcut icon" href="./img/icons/favicon.ico" type="image/x-icon">
     <link href = "fonts\gilroy\stylesheet.css" rel = "stylesheet" type = "text/css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js" integrity="sha512-cOH8ndwGgPo+K7pTvMrqYbmI8u8k6Sho3js0gOqVWTmQMlLIi6TbqGWRTpf1ga8ci9H3iPsvDLr4X7xwhC/+DQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <link rel="stylesheet" href="./css/animate.css">
     <title>Magic Brows</title>
 </head>
 <body>
@@ -28,10 +29,10 @@
                     <div class="about__title block__title">
                         About me
                     </div>
-                    <div class="about__circle block__title-circle circle"></div>
+                    <div class="about__circle block__title-circle circle  wow fadeInLeftBig"></div>
                     <div class="about__body block__body">
-                        <div class="about__text block__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti ut cumque incidunt et. Qui, enim dolor amet porro maxime, voluptatem hic quas commodi impedit dolorum, possimus quam repellat iste laboriosam?</div>    
-                        <div class="about_image block__image">
+                        <div class="about__text block__text wow fadeInLeft">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti ut cumque incidunt et. Qui, enim dolor amet porro maxime, voluptatem hic quas commodi impedit dolorum, possimus quam repellat iste laboriosam?</div>    
+                        <div class="about_image block__image wow fadeInRight">
                            <img src="./img/kamila.JPG" alt="">
                         </div>
                     </div>
@@ -52,8 +53,10 @@
         </div>
    </div>
    
-   <script src="./script.js">
-
+   <script src="./js/script.js"></script>
+   <script src="./js/wow.min.js"></script>
+   <script>
+   new WOW().init();
    </script>
 </body>
 </html>
