--- a/index.html
+++ b/index.html
@@ -45,15 +45,15 @@
 
                         </div>
                         <div class="portfolio__colums-two two">
-
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia nisi ratione, ipsam unde tempore cumque excepturi quisquam rerum cum voluptate sint debitis reiciendis laborum, aliquam atque, tempora amet maiores eum sunt. Qui aspernatur illo nihil expedita maiores earum tempore quos id! Molestiae iusto quas earum a expedita ex nihil dolores.
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam enim magnam excepturi eveniet laudantium aspernatur ducimus voluptatum alias laboriosam vel ipsam, odio nisi. Nisi quaerat laboriosam culpa alias omnis odio.
                         </div>
                     </div>
                 </div>
             </div>
         </div>
    </div>
-   
-   <script src="./js/script.js"></script>
+    <script src="./js/script.js"></script>
    <script src="./js/wow.min.js"></script>
    <script>
    new WOW().init();
