--- a/index.html
+++ b/index.html
@@ -40,14 +40,26 @@
                 <div class="portfolio block">
                     <div class="portfolio__title block__title">Portfolio</div>
                     <div class="portfolio__circle block__title-circle circle"></div>
-                    <div class="portfolio__body portfolio__colums">
-                        <div class="portfolio__colums-one">
-
+                    <div class="portfolio__items">
+                         <div class="portfolio__item wow fadeInUp">
+                            <img src="./img/kamila.JPG" alt="" srcset="">
                         </div>
-                        <div class="portfolio__colums-two two">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia nisi ratione, ipsam unde tempore cumque excepturi quisquam rerum cum voluptate sint debitis reiciendis laborum, aliquam atque, tempora amet maiores eum sunt. Qui aspernatur illo nihil expedita maiores earum tempore quos id! Molestiae iusto quas earum a expedita ex nihil dolores.
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam enim magnam excepturi eveniet laudantium aspernatur ducimus voluptatum alias laboriosam vel ipsam, odio nisi. Nisi quaerat laboriosam culpa alias omnis odio.
+                        <div class="portfolio__item wow fadeInRight">
+                            <img src="./img/kamila.JPG" alt="" srcset="">
                         </div>
+                        <div class="portfolio__item portfolio__item-big wow fadeInLeft">
+                            <img src="./img/kamila.JPG" alt="" srcset="">
+                        </div>
+                        <div class="portfolio__item wow fadeInUp">
+                            <img src="./img/kamila.JPG" alt="" srcset="">
+                        </div>
+                        <div class="portfolio__item wow fadeInRight">
+                            <img src="./img/kamila.JPG" alt="" srcset="">
+                        </div>
+                        <div class="portfolio__item  portfolio__item-big wow fadeInLeft">
+                            <img src="./img/kamila.JPG" alt="" srcset="">
+                        </div>
+                          
                     </div>
                 </div>
             </div>
