--- a/index.html
+++ b/index.html
@@ -56,12 +56,74 @@
                         <div class="portfolio__item wow fadeInRight">
                             <img src="./img/kamila.JPG" alt="" srcset="">
                         </div>
-                        <div class="portfolio__item  portfolio__item-big wow fadeInLeft">
+                        <div class="portfolio__item  portfolio__item-big wow fadeInLeft last_item">
                             <img src="./img/kamila.JPG" alt="" srcset="">
                         </div>
                           
                     </div>
                 </div>
+                <div class="price block">
+                    <div class="price__title block__title wow fadeInLeft">Price</div>
+                    <div class="price__circle block__title-circle circle wow fadeInRight"></div>
+                    <div class="price__body">
+                        <div class="price__table table wow fadeInUp">
+                            <div class="table__items">
+                                <div class="table__item">
+                                    <div class="table__item-label">Перманентный макияж бровей</div>
+                                    <div class="table__item-price">6000</div>
+                                </div>
+                                <div class="table__item">
+                                    <div class="table__item-label">Корреция перманентного макияжа бровей</div>
+                                    <div class="table__item-price">3000</div>
+                                </div>
+                                <div class="table__item">
+                                    <div class="table__item-label">Вечерний макияж</div>
+                                    <div class="table__item-price">1600</div>
+                                </div>
+                                <div class="table__item">
+                                    <div class="table__item-label">Дневной макияж</div>
+                                    <div class="table__item-price">1300</div>
+                                </div>
+                                <div class="table__item">
+                                    <div class="table__item-label">Ламинирование ресниц</div>
+                                    <div class="table__item-price">1100</div>
+                                </div>
+                                <div class="table__item">
+                                    <div class="table__item-label">Долговременная укладка бровей + моделирование и окрашивание</div>
+                                    <div class="table__item-price">900</div>
+                                </div>
+
+                                <div class="table__item">
+                                    <div class="table__item-label">Моделирование и окрашивание бровей</div>
+                                    <div class="table__item-price">600</div>
+                                </div>
+                                <div class="table__item">
+                                    <div class="table__item-label">Окрашивание ресниц</div>
+                                    <div class="table__item-price">400</div>
+                                </div>
+                                <div class="table__item">
+                                    <div class="table__item-label">Моделирование бровей</div>
+                                    <div class="table__item-price">300</div>
+                                </div>
+                                <div class="table__item">
+                                    <div class="table__item-label">Удаление нежелательных волосков</div>
+                                    <div class="table__item-price">200</div>
+                                </div>
+                                <div class="table__item">
+                                    <div class="table__item-label">Счастье для бровей</div>
+                                    <div class="table__item-price">200</div>
+                                </div>
+                            </div>
+                            <!-- <div class="price__689">
+                                <img src="./img/kamila.JPG" alt="" srcset="">
+                            </div> -->
+                        </div>
+                        <div class="price__image wow fadeInRight">
+                            <img src="./img/kamila.JPG" alt="" srcset="">
+                        </div>
+                    </div>
+                </div>
+                <div class="bb">Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia quisquam corrupti rem quam. Nulla nesciunt saepe temporibus, odit eaque molestias quos nemo nobis qui aspernatur magnam, doloremque repellendus mollitia nam amet. Sequi facere expedita distinctio ex, officiis eveniet optio excepturi omnis necessitatibus voluptatum molestias iusto minima inventore debitis enim tempora architecto nobis natus cupiditate perspiciatis itaque vel ratione autem quasi. Fuga velit totam soluta, ea debitis laudantium quasi quibusdam, provident porro rem eius laboriosam ipsum perspiciatis mollitia, voluptatum sint repellat illo optio obcaecati! Expedita, sunt, nisi temporibus modi quas ipsum eaque ipsam voluptas illo ducimus maiores officiis tenetur nesciunt enim in aliquid nihil pariatur! Doloribus repellat totam rerum suscipit ipsa, est dolores ratione voluptate adipisci repudiandae non, nihil explicabo porro! Veritatis, nemo dolor pariatur necessitatibus, iure aut facilis quibusdam, cupiditate distinctio magni velit culpa. Dolor ducimus reprehenderit magni at soluta libero fugit. Sunt neque nostrum, totam vitae delectus nemo suscipit. Minima aperiam, saepe, dolore omnis temporibus distinctio error eos possimus exercitationem esse eaque, veniam harum odio eveniet debitis reiciendis asperiores. Provident neque in eveniet facilis quibusdam molestiae recusandae? Quae, corporis voluptas fuga ad est soluta quia facilis aliquam illum eaque fugiat vel autem voluptatibus blanditiis? Neque ea id magnam laborum.</div>
             </div>
         </div>
    </div>
