--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="full-screen__body">
                 <div class="full-screen__title">KAMILA SHAYAKHMETOVA</div>
                 <div class="full-screen__text">Magic Brows</div>
-                <div class="full-screen__link">VIEW PORTFOLIO</div>
+                <div class="full-screen__link"><a href="#portfolio">VIEW PORTFOLIO</a></div>
             </div>
             <div class="full-screen__photo">
                 <img src="" alt="">
@@ -37,7 +37,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="portfolio block">
+                <div class="portfolio block" id="portfolio">
                     <div class="portfolio__title block__title">Portfolio</div>
                     <div class="portfolio__circle block__title-circle circle"></div>
                     <div class="portfolio__items">
