--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
             depth: 100,
             modifier: 1,
             rotate: 50,
-            slideShadows: true,
+            slideShadows: false,
             stretch: 0,
           },
         });
