--- a/index.html
+++ b/index.html
@@ -188,8 +188,32 @@
                         <img src="./img/kamila.JPG" alt="">
                       </div>
                     </div>
-                  </div>
-
+                </div>
+                <div class="form">
+                    <div class="form__title block__title  wow fadeInLeft">Form
+                        <div class="form__circle">
+                            <img src="./img/circle.png" alt="">
+                        </div>
+                    </div>
+                    <div class="form__body">
+                        <div class="form__logo  wow fadeInDown">
+                            <img src="./img/kamila.JPG" alt="">
+                        </div>
+                        <div class="form__content feedback  wow fadeInUp">
+                            <div class="feedback__text">Заполни небольшую форму и я обязательно с тобой свяжусь</div>
+                            <div class="feedback__forma">
+                                <form action="#" method="post" class="feedback__items">
+                                    <input type="text" class="feedback__item" placeholder="Name">
+                                    <input type="tel" class="feedback__item" placeholder="Phone">
+                                    <textarea name="" id="" cols="30" rows="10" class="feedback__item" placeholder="Желаемая процедура"></textarea>
+                                    <div class="feedback__message">Можешь выбрать желаемую дату и время</div>
+                                    <input type="datetime-local" class="feedback__item">
+                                    <button type="submit" class="feedback__item feedback__buttom" ><span>send</span></button>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
 
 
             </div>
