--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <div class="wrapper">
-        <div class="full-screen">
+        <!-- <div class="full-screen">
             <div class="full-screen__body">
                 <div class="full-screen__title">KAMILA SHAYAKHMETOVA</div>
                 <div class="full-screen__text">Magic Brows</div>
@@ -23,9 +23,9 @@
             <div class="full-screen__photo">
                 <img src="" alt="">
             </div>
-        </div>
+        </div> -->
         <div class="container">
-            <div class="content">
+            <!-- <div class="content">
                 <div class="about block">
                     <div class="about__title block__title">
                         About me
@@ -188,7 +188,7 @@
                         <img src="./img/kamila.JPG" alt="">
                       </div>
                     </div>
-                </div>
+                </div> -->
                 <div class="form">
                     <div class="form__title block__title  wow fadeInLeft">Form
                         <div class="form__circle">
@@ -202,10 +202,10 @@
                         <div class="form__content feedback  wow fadeInUp">
                             <div class="feedback__text">Заполни небольшую форму и я обязательно с тобой свяжусь</div>
                             <div class="feedback__forma">
-                                <form action="#" method="post" class="feedback__items">
-                                    <input type="text" class="feedback__item" placeholder="Name">
-                                    <input type="tel" class="feedback__item" placeholder="Phone">
-                                    <textarea name="" id="" cols="30" rows="10" class="feedback__item" placeholder="Желаемая процедура"></textarea>
+                                <form action="#"  id="form" class="feedback__items">
+                                    <input type="text" class="feedback__item _req _name form__input" placeholder="Твоё имя">
+                                    <input type="tel" class="feedback__item _req _telephone form__input" placeholder="8 (999) 999 99 99">
+                                    <textarea name="" id="" cols="30" rows="10" class="feedback__item _req form__input" placeholder="Желаемая процедура или сообщение..."></textarea>
                                     <div class="feedback__message">Можешь выбрать желаемую дату и время</div>
                                     <input type="datetime-local" class="feedback__item">
                                     <button type="submit" class="feedback__item feedback__buttom" ><span>send</span></button>
