--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                         <div class="form__logo  wow fadeInDown">
                             <img src="./img/kamila.JPG" alt="">
                         </div>
-                        <div class="form__content feedback  wow fadeInUp">
+                        <div class="form__content feedback  wow fadeInUp" id="load">
                             <div class="feedback__text">Заполни небольшую форму и я обязательно с тобой свяжусь</div>
                             <div class="feedback__forma">
                                 <form action="#"  id="form" class="feedback__items">
