--- a/index.html
+++ b/index.html
@@ -199,15 +199,15 @@
                         <div class="form__logo  wow fadeInDown">
                             <img src="./img/kamila.JPG" alt="">
                         </div>
-                        <div class="form__content feedback  wow fadeInUp" id="load">
+                        <div class="form__content feedback  wow fadeInUp" id="load"> 
                             <div class="feedback__text">Заполни небольшую форму и я обязательно с тобой свяжусь</div>
                             <div class="feedback__forma">
                                 <form action="#"  id="form" class="feedback__items">
-                                    <input type="text" class="feedback__item _req _name form__input" placeholder="Твоё имя">
-                                    <input type="tel" class="feedback__item _req _telephone form__input" placeholder="8 (999) 999 99 99">
-                                    <textarea name="" id="" cols="30" rows="10" class="feedback__item _req form__input" placeholder="Желаемая процедура или сообщение..."></textarea>
+                                    <input type="text" class="feedback__item _req _name form__input" name="name" placeholder="Твоё имя">
+                                    <input type="tel" class="feedback__item _req _telephone form__input" name="phone" placeholder="8 (999) 999 99 99">
+                                    <textarea name="" id="" cols="30" rows="10" class="feedback__item _req form__input" name="message" placeholder="Желаемая процедура или сообщение..."></textarea>
                                     <div class="feedback__message">Можешь выбрать желаемую дату и время</div>
-                                    <input type="datetime-local" class="feedback__item">
+                                    <input type="datetime-local" class="feedback__item" name="datetime">
                                     <button type="submit" class="feedback__item feedback__buttom" ><span>send</span></button>
                                 </form>
                             </div>
