--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/brands.css">
+    <link rel="stylesheet" href="./css/iconsfont.css">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="shortcut icon" href="./img/icons/favicon.ico" type="image/x-icon">
     <link href = "fonts\gilroy\stylesheet.css" rel = "stylesheet" type = "text/css" />
@@ -219,33 +219,37 @@
             </div>
         </div>
         <footer>
-         <div class="foot">
-             <div class="foot_columns">
-                 <div class="foot__column foco">
-                     <div class="foco__title foot__title">Navigation</div>
-                     <ul class="foco__list">
-                         <li class="foco__link"><a href="#about">About</a></li>
-                         <li class="foco__link"><a href="#portfolio">Portfolio</a></li>
-                         <li class="foco__link"><a href="#price">Price</a></li>
-                         <li class="foco__link"><a href="#myworks">My works</a></li>
-                     </ul>
-                 </div>
-                 <div class="foot__column middle">
-                     <ul class="middle__list">
-                         <li class="middle__link"><a href="">здесь</a></li>
-                         <li class="middle__link"><a href="">будут</a></li>
-                         <li class="middle__link"><a href="">иконки</a></li>
-                         <li class="middle__link"><a href="">соцесетей</a></li>
-                     </ul>
-                 </div>
-                 <div class="foot__column right">
-                     <div class="foco__title foot__title">Address</div>
-                     <ul class="right__list">
-                         <li class="right__link"><a href="https://yandex.ru/maps/11176/tyumen-oblast/?ll=67.063953%2C57.399082&mode=routes&rtext=57.402417%2C67.070124~57.399192%2C67.062039&rtt=pd&ruri=ymapsbm1%3A%2F%2Fgeo%3Fdata%3DCgg1MzE1OTMyMxJG0KDQvtGB0YHQuNGPLCDQotGO0LzQtdC90YHQutCw0Y8g0L7QsdC70LDRgdGC0YwsINGB0LXQu9C-INCv0YDQutC-0LLQviIKDecjhkIVE5xlQg%2C%2C~ymapsbm1%3A%2F%2Fgeo%3Fdata%3DCgoyMTU5NjY5NTQ4EmrQoNC-0YHRgdC40Y8sINCi0Y7QvNC10L3RgdC60LDRjyDQvtCx0LvQsNGB0YLRjCwg0YHQtdC70L4g0K_RgNC60L7QstC-LCDRg9C70LjRhtCwINCg0LXRgdC_0YPQsdC70LjQutC4LCA3IgoNxB-GQhXGmGVC&z=17.69" target="_blank" class="a_adress">с.Ярково, ул.Республики, д.7/2</a></li>
-                     </ul>
-                 </div>
-             </div>
-         </div>
+            <div class="container">
+
+                <div class="foot">
+                    <div class="foot_columns">
+                        <div class="foot__column foco">
+                            <div class="foco__title foot__title">Navigation</div>
+                            <ul class="foco__list">
+                                <li class="foco__link"><a href="#about">About</a></li>
+                                <li class="foco__link"><a href="#portfolio">Portfolio</a></li>
+                                <li class="foco__link"><a href="#price">Price</a></li>
+                                <li class="foco__link"><a href="#myworks">My works</a></li>
+                            </ul>
+                        </div>
+                        <div class="foot__column middle">
+                            <ul class="middle__list">
+                                <li class="middle__link"><a href="" class="_icon-phone"></a></li>
+                                <li class="middle__link"><a href="" class="_icon-instagram"></a></li>
+                                <li class="middle__link"><a href="" class="_icon-telegram"></a></li>
+                                <li class="middle__link"><a href="" class="_icon-viber"></a></li>
+                                <li class="middle__link"><a href="" class="_icon-vk"></a></li>
+                            </ul>
+                        </div>
+                        <div class="foot__column right">
+                            <div class="foco__title foot__title">Address</div>
+                            <ul class="right__list">
+                                <li class="right__link"><a href="https://yandex.ru/maps/11176/tyumen-oblast/?ll=67.063953%2C57.399082&mode=routes&rtext=57.402417%2C67.070124~57.399192%2C67.062039&rtt=pd&ruri=ymapsbm1%3A%2F%2Fgeo%3Fdata%3DCgg1MzE1OTMyMxJG0KDQvtGB0YHQuNGPLCDQotGO0LzQtdC90YHQutCw0Y8g0L7QsdC70LDRgdGC0YwsINGB0LXQu9C-INCv0YDQutC-0LLQviIKDecjhkIVE5xlQg%2C%2C~ymapsbm1%3A%2F%2Fgeo%3Fdata%3DCgoyMTU5NjY5NTQ4EmrQoNC-0YHRgdC40Y8sINCi0Y7QvNC10L3RgdC60LDRjyDQvtCx0LvQsNGB0YLRjCwg0YHQtdC70L4g0K_RgNC60L7QstC-LCDRg9C70LjRhtCwINCg0LXRgdC_0YPQsdC70LjQutC4LCA3IgoNxB-GQhXGmGVC&z=17.69" target="_blank" class="a_adress">с.Ярково, ул.Республики, д.7/2</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </footer>
 
    </div>
